# andronaut

./: CMakeLists.txt  LICENSE  LICENSE-2.0.txt  LICENSE1.txt
andronaut/src/: engine.cpp  window.cpp  window.h
andronaut/src/graphics/: buffer.cpp  buffer.h  glslCompiler.h  shader.h  texture.cpp  texture.h
andronaut/src/utils/: fileop.cpp  fileop.h  timer.cpp  timer.h
glue/: android_native_app_glue.h
include/ANUT/: ANUT.h  ANUT_graphics.h  ANUT_utils.h  glesGraphics.h  graphics.h  opengles.h  system.h
src/: activity.cpp  activity.h  anut.h  engine.cpp  engine.h  event.cpp  event.h  input.cpp  input.h  window.cpp  window.h
src/ANUT/: ANUT.h  ANUT_graphics.h  ANUT_math.h  activity.cpp  activity.h  engine.cpp  engine.h  input.cpp  window.cpp  window.h
src/ANUT/graphics/: glslCompiler.cpp  glslCompiler.h  mesh.cpp  mesh.h  shader.cpp  shader.h  uniform.h
src/ANUT/math/: HashCombine.h  TMatHelpers.h  TQuatHelpers.h  TVecHelpers.h  half.h  mat2.h  mat3.h  mat4.h  quat.h  scalar.h  vec2.h  vec3.h  vec4.h
src/ANUT/utils/: fileop.cpp  timer.cpp
src/graphics/: buffer.cpp  buffer.h  glslCompiler.cpp  glslCompiler.h  gpuBuffer.cpp  gpuBuffer.h  gpuResource.cpp  gpuResource.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.h  vertexLayout.cpp  vertexLayout.h
src/graphics/gles/: glslCompiler.cpp  glslCompiler.h  gpuBuffer.cpp  gpuBuffer.h  gpuResource.cpp  gpuResource.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexLayout.cpp  vertexLayout.h
src/math/: TMatHelpers.h  TQuatHelpers.h  TVecHelpers.h  mat2.h  mat3.h  mat4.h  matfunc.cpp  matfunc.h  quat.h  timer.cpp  timer.h  vec2.h  vec3.h  vec4.h
src/system/: activity.cpp  engine.cpp  event.cpp  timer.cpp  timer.h  window.cpp  window.h
src/utils/: fileop.cpp  fileop.h  timer.cpp  timer.h
